--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+.btn {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #8634d9;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #21c297;
+  background-image: -webkit-linear-gradient(top, #21c297, #34c0d9);
+  background-image: -moz-linear-gradient(top, #21c297, #34c0d9);
+  background-image: -ms-linear-gradient(top, #21c297, #34c0d9);
+  background-image: -o-linear-gradient(top, #21c297, #34c0d9);
+  background-image: linear-gradient(to bottom, #21c297, #34c0d9);
+  text-decoration: none;
 }
