--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,33 +1,30 @@
 .rowStyle {
-    display: flex
+    display: flex;
   }
   
   .squareStyle {
-    width:60px;
-    height:60px;
-     background-color: #ddd;
+    width: 60px;
+    height: 60px;
+    background-color: rgb(187, 113, 247);
     margin: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    color: white
+    color: white;
   }
   
   .boardStyle {
-     background-color: #eee;
-    width: 208px;
-    align-items: center;
-    justify-content: center;
+    width: 300px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    border: 3px #eee solid
   }
-  
   .containerStyle {
     display: flex;
     align-items: center;
-    flex-direction: column
+    flex-direction: column;
   }
   
   .instructionsStyle {
@@ -42,7 +39,8 @@
     margin-bottom: 16px;
     width: 80px;
     height: 40px;
-     background-color: #8acaca;
-    color: white;
+    background-color: #8acaca;
+    color: #52bed1;
     font-size: 16px;
   }
+  
